tests/fixtures/type_checker/pass/global_local_var_name_overwrite.galaxy
int a;
void asd(){ int a; }
