tests/fixtures/type_checker/error/detect_name_collision_local_global_1.galaxy
void detect_name_collision_local_global_1()
{
    int detect_name_collision_local_global_1 = 1;
}
